# RTOS-demo

./: DODATEK.md  DYGRESJE.md  LEKCJA.md  OBRONA_PRZED_ZAKLESZCZENIAMI.md  PYTANIA_PO_WYKŁADZIE.md  PYTANIA_STUDENTÓW.md  README.md  REALNY_SPRZĘT.md  RECENZJA.md  RTOS-demo.sln  SLAJDY.md  TEMATY_POBOCZNE.md  WEBSITES.md  WNIOSKI.md  WSPOLNE_CECHY.md  WYKLAD_POPRAWIONY.md  WYKŁAD.md  WYKŁAD_AI_W_ROBOTYCE.md  WYKŁAD_BCI.md  WYKŁAD_CYBERBEZPIECZENSTWO_ROBOTOW.md  WYKŁAD_DIGITAL_TWIN.md  WYKŁAD_LLM_W_ROBOTYCE.md  WYKŁAD_PERCEPCJA_I_WIZJA.md  WYKŁAD_ROBOTYKA_ROJU.md  WYKŁAD_ZAGROŻENIA.md  ZAJAWKA.md  dobry_prompt.md
laby/: README.md
lekcje/: README.md
lekcje/rust/: Cargo.toml  deadlock.rs  deadlock_prevention.md  freertos_ffi.md  mod.rs  priority_scheduler.md  race_conditions.rs  spsc_queue.md
lekcje/rust/src/: deadlock_01.rs  deadlock_02.rs  lock_free_01.rs  priority_inversion_01.rs  race_condition_01.rs  starvation_01.rs
slajdy/: 01_inwersja_priorytetow.md  02_protokol_pułapu_priorytetu.md  03_bounding_jitter.md  04_wcet.md  05_partycjonowanie_czasowe.md  06_harmonogramowanie_mieszanej_krytycznosci.md  07_struktury_bez_blokad.md  08_tickless_idle.md  09_arinc_653.md  10_iso_26262.md  11_do_178c.md  12_afdx.md  13_izolacja_rdzeni.md  14_safety_monitor.md  15_nmi.md  16_mpu.md  17_dma_deterministyczne.md  18_harmonogramowanie_tt.md  19_safety_case.md
studia_sa_proste/: 01_kolejka_spsc.md  02_scheduler_priorytety.md  03_atomowe_operacje.md  04_bariery_pamieci.md  05_async_await_embedded.md  06_panic_handler.md  07_freertos_ffi.md  08_16_dodatkowe_lekcje.md  README.md  (+4 more)
(+95 files in other folders)
